fix for too long text in title of modal popup

--- a/app/assets/stylesheets/admin/modal.scss
+++ b/app/assets/stylesheets/admin/modal.scss
@@ -46,7 +46,8 @@
   }
 
   .modal-title {
-    margin-bottom:0;
+    margin-bottom: 0;
+    word-break: break-all;
   }
 
   .modal-footer {
